fix: align category tags (3 x 4 -> 4 x 3)

--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .logo {
-    font-size: 32px;
+    font-size: 38px;
     color:#0f172a;
     text-decoration: none;
     font-weight: 700;
@@ -71,12 +71,12 @@ body {
 }
 
 .auth-status {
-    justify-content: flex-start;
+
     padding: 20px 100px;
     margin-top: 6rem;
     font-weight: 600;
     font-size: 25px;
-    color: #334155;
+    color: #494a7b;
 }
 
 .listings-container {
